// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`wishlist / components / item add dialog > opened > should be displayed 1`] = `
<body
  style="margin-right: 8px; --scrollbar-width: 1024px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <div
      class="modal-backdrop"
      data-dialog-overlay=""
      data-state="open"
      id="bits-5"
      style="pointer-events: auto;"
    >
      <!---->
    </div>
    
    
    
    <!---->
     
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
     
    <div
      aria-labelledby="bits-12"
      aria-modal="true"
      class="modal-box overflow-y-visible p-0"
      data-dialog-content=""
      data-state="open"
      id="bits-6"
      interactoutsidebehavior="close"
      role="dialog"
      style="pointer-events: auto; outline: undefined;"
      tabindex="-1"
    >
      <!---->
      <!---->
      <div
        class="max-h-[inherit]"
        data-scroll-area-root=""
        dir="ltr"
        id="bits-9"
        style="position: relative; --bits-scroll-area-corner-height: 0px; --bits-scroll-area-corner-width: 0px;"
      >
        <!---->
        <div
          class="max-h-[inherit] p-6"
          data-scroll-area-viewport=""
          id="bits-10"
          style="overflow-x: hidden; overflow-y: scroll;"
        >
          <div
            data-scroll-area-content=""
            id="bits-11"
            style="min-width: undefined;"
          >
            <!---->
            <div
              class="flex items-start prose"
            >
              <!---->
              <div
                aria-level="2"
                class="mt-0 mr-auto"
                data-dialog-title=""
                data-state="open"
                id="bits-12"
                role="heading"
              >
                Добавить желание
                <!---->
              </div>
              
              <!---->
               
              <!---->
              <button
                class="cursor-pointer"
                data-dialog-close=""
                data-state="open"
                id="bits-13"
                tabindex="0"
              >
                <svg
                  class="lucide-icon lucide lucide-x"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!---->
                  <path
                    d="M18 6 6 18"
                  >
                    
                  </path>
                  
                  <!---->
                  <path
                    d="m6 6 12 12"
                  >
                    
                  </path>
                  
                  <!---->
                  <!---->
                  
                  <!---->
                </svg>
                <!---->
              </button>
              
              <!---->
            </div>
             
            <!---->
            
            <!---->
          </div>
        </div>
        <!---->
         
        <!---->
        <!---->
        <!---->
        
        
        
        <!---->
         
        <!---->
         
        <!---->
        
        <!---->
        <!---->
      </div>
      
      
      <!---->
    </div>
    
    
    
    
    
    
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-6"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="open"
      id="bits-4"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`wishlist / components / item add dialog > opened > should close on form finish 1`] = `
<body
  style="margin-right: 8px; --scrollbar-width: 1024px; overflow: hidden; pointer-events: none;"
>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <div
      class="modal-backdrop"
      data-dialog-overlay=""
      data-state="open"
      id="bits-29"
      style="pointer-events: auto;"
    >
      <!---->
    </div>
    
    
    
    <!---->
     
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
     
    <div
      aria-labelledby="bits-36"
      aria-modal="true"
      class="modal-box overflow-y-visible p-0"
      data-dialog-content=""
      data-state="open"
      id="bits-30"
      interactoutsidebehavior="close"
      role="dialog"
      style="pointer-events: auto; outline: undefined;"
      tabindex="-1"
    >
      <!---->
      <!---->
      <div
        class="max-h-[inherit]"
        data-scroll-area-root=""
        dir="ltr"
        id="bits-33"
        style="position: relative; --bits-scroll-area-corner-height: 0px; --bits-scroll-area-corner-width: 0px;"
      >
        <!---->
        <div
          class="max-h-[inherit] p-6"
          data-scroll-area-viewport=""
          id="bits-34"
          style="overflow-x: hidden; overflow-y: scroll;"
        >
          <div
            data-scroll-area-content=""
            id="bits-35"
            style="min-width: undefined;"
          >
            <!---->
            <div
              class="flex items-start prose"
            >
              <!---->
              <div
                aria-level="2"
                class="mt-0 mr-auto"
                data-dialog-title=""
                data-state="open"
                id="bits-36"
                role="heading"
              >
                Добавить желание
                <!---->
              </div>
              
              <!---->
               
              <!---->
              <button
                class="cursor-pointer"
                data-dialog-close=""
                data-state="open"
                id="bits-37"
                tabindex="0"
              >
                <svg
                  class="lucide-icon lucide lucide-x"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <!---->
                  <path
                    d="M18 6 6 18"
                  >
                    
                  </path>
                  
                  <!---->
                  <path
                    d="m6 6 12 12"
                  >
                    
                  </path>
                  
                  <!---->
                  <!---->
                  
                  <!---->
                </svg>
                <!---->
              </button>
              
              <!---->
            </div>
             
            <!---->
            
            <!---->
          </div>
        </div>
        <!---->
         
        <!---->
        <!---->
        <!---->
        
        
        
        <!---->
         
        <!---->
         
        <!---->
        
        <!---->
        <!---->
      </div>
      
      
      <!---->
    </div>
    
    
    
    
    
    
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-controls="bits-30"
      aria-expanded="true"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="open"
      id="bits-28"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;

exports[`wishlist / components / item add dialog > should be displayed closed 1`] = `
<body>
  <div
    id="modal-portal"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
  <div>
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      class="hidden"
      data-dialog-trigger=""
      data-state="closed"
      id="bits-1"
    >
      <!---->
    </button>
    
    <!---->
     
    <!---->
    
    <!---->
    
    
    
  </div>
</body>
`;
